--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,52 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Sobre
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item lines="full">
+    <ion-avatar slot="start">
+      <img src="assets/desenvolvedora.jpg">
+    </ion-avatar>
+    
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <ion-label>
+      <div>
+        <h3>Kauany Lima</h3>
+        <p>Aluno na Etec "Cidade do Livro"</p>
+        <p>Macatuba-SP</p>
+        <p>(14)9 8833-3749</p>
+        <p> 
+          <a href="mailto:kauany,lima3@etec.gov.br">kauany,lima3@etec.gov.br</a>
+        </p>
+        
+      </div>
+    </ion-label>
+  </ion-item>
+
+  <div class="ion-text-center">
+    <img src="https://assets.pokemon.com/static2/br/img/icons/tcgo_logo.png" >
+  </div>
+
+  <ion-item lines="full">
+    <ion-label>Versão</ion-label>
+    <ion-badge color="secondary">0.01</ion-badge>
+  </ion-item>
+
+  <ion-item lines="full">
+    <ion-label>Ano</ion-label>
+      <ion-badge color="secondary">2021</ion-badge>
+  </ion-item>
+
+  <ion-item lines="full">
+    <ion-label>Turma</ion-label>
+      <ion-badge color="secondary">B</ion-badge>
+  </ion-item>
+
+ 
+
+
 </ion-content>
